@@ -2,6 +2,10 @@
 0.9.8 (Feb 2011)
 ----------------
 
+Restructured. Moved DAV package to pywebdav.lib. All integrators must simply replace
+''from DAV'' imports to ''from pywebdav.lib''.
+[Simon Pamies]
+
 0.9.4 (April 15 2010)
 ---------------------
   
